--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -1,13 +1,66 @@
-\documentclass{book}      
-\includeonly{buildScripts,depMngmt}
+\documentclass[10pt,oneside,a4paper,titlepage]{book} 
+\setlength{\topmargin}{-2cm}
+\setlength{\headsep}{1cm}
+\setlength{\textheight}{26.5cm}
+\setlength{\textwidth}{17.3cm}
+\setlength{\evensidemargin}{-0.7cm}
+\setlength{\oddsidemargin}{-0.7cm}
+    
+\includeonly{introduction,buildScripts,depMngmt,organizeBuildLogic,commandLine,mavenPoms}
 \usepackage{upquote}
+\usepackage{tabularx}
 \usepackage{fancyvrb}
+\usepackage{ccaption}
+\usepackage{color}
+
+\definecolor{MyGray}{rgb}{0.96,0.97,0.98}
+\makeatletter\newenvironment{graybox}{%
+   \begin{lrbox}{\@tempboxa}\begin{minipage}{\columnwidth}}{\end{minipage}\end{lrbox}%
+   \colorbox{MyGray}{\usebox{\@tempboxa}}
+}\makeatother
+
 % \usepackage{listings}
 % \lstloadlanguages{Java} 
 % \lstset{language=Java}
+% \DefineShortVerb{\+}
 \renewcommand{\figurename}{Listing}
-\usepackage{hyperref}
+\usepackage[colorlinks=true]{hyperref}
+
 \begin{document}
+\newcommand\HRule{\noindent\rule{\linewidth}{1.5pt}}
+\begin{titlepage}
+   \vspace*{\stretch{1}}
+   \HRule
+   \begin{flushleft}
+      \Huge {\bf Gradle} \\
+      \LARGE A build system \\
+   \end{flushleft}
+   \HRule
+\vspace*{\stretch{0.2}}
+\begin{center}
+    \large Version \input{../../../build/docs/userguide/data/version}
+\end{center}
+\vspace*{\stretch{0.5}}
+\begin{center}
+\large Copyright \copyright  2007-2008 Hans Dockter
+\end{center}
+\vspace*{\stretch{0.2}}
+\begin{center}
+Copies of this document may be made for your own use and for distribution to others, provided that you do not 
+charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether 
+distributed in print or electronically.
+\end{center}   
+\end{titlepage}
+\pagenumbering{roman}
+\tableofcontents
+\newpage
+\pagenumbering{arabic}
+\include{introduction}
 \include{buildScripts}
-\include{depMngmt}          
+\include{depMngmt} 
+\include{organizeBuildLogic}         
+\appendix
+\include{commandLine} 
+\include{mavenPoms} 
+
 \end{document}
